# Olaaaf

./: LICENSE  README.md  example1.KiwiMilkshake copy.py  example4.CarrotCabbageSalad copy.py  pyproject.toml  test copy.py  test.py  test2.py  test_pie.py
benchmarkOlaaaf2/: benchmark.py  ex_BreastCancer.py  ex_BreastCancerNumerical.py  ex_CarrotCabbageSalad.py  ex_CombinedMilkshake.py  ex_CombinedSalad.py  ex_HighDistance.py  ex_KiwiMilkshake.py  ex_KiwiMilkshakeNoBanana.py  ex_KiwiMilkshakeSameNumberOfFruitTypes.py  ex_Pie.py  example.py  results.txt
docs/: adaptation.html  constants.html  formulaInterpreter.html  index.html  revision.html
docs/distance/: index.html
docs/domainKnowledge/: domainKnowledge.html  existenceKnowledge.html  taxonomy.html
docs/formula/: formula.html  formulaDisplay.html  formulaManager.html  index.html
docs/mlo_solver/: LPSolver.html  LPSolverRounded.html  MLOSolver.html  index.html  optimizationValues.html  scipySolver.html  scipySolverRounded.html
docs/olaaaf/: adaptation.html  constants.html  formulaInterpreter.html  index.html  revision.html
docs/projector/: index.html  (+2 more)
examplesICCBR2024/: example1.KiwiMilkshake.py  example2.KiwiMilkshakeNoBanana.py  example3.KiwiMilkshakeSameNumberOfFruitTypes.py  example4.CarrotCabbageSalad.py
src/: __init__.py  adaptation.py  constants.py  formulaInterpreter.py  revision.py
tests/: testMLOSolver.py  testRevision.py  testTableaux.py  test_cocktail.py  test_cocktail_simplified.py  test_dnf.py  test_dnf_both_neg.py  test_dnf_mu_neg.py  test_dnf_psi_neg.py  test_salad2.py  test_square.py
(+279 files in other folders)
